# pybashutils

./: .appveyor.yml  .coveragerc  .gitignore  .mypy.ini  .travis.yml  7zcp.sh  DetectOS.py  LICENSE  OSdetect.py  README.md  README.rst  YouTubeLive-screenshare-noaudio.py  YouTubeLive-screenshare.py  absolute_path_of_bash_script.sh  bash_time_per_line.sh  checkIP.sh  checkRAM.m  cmake_setup.sh  compare_binary.py  count_bash_forks.sh  cupd.sh  cupd3.sh  cvpn  demo_windows_linux_detect.py  diffFN  diffFN.sh  diffdir  diffdir.py  diffdir.sh  diskfree_sigterm.py  doc2pdf.py  drive-google-deinit  dvpn  echolink  empty_file.py  eps2pdf  eps2pdf.sh  find_bad_characters.py  findbig  findbig.sh  (+63 more)
archive_bash/: findtext.sh  findvid.sh  latexdiff_recursive.sh  tarcp.sh  xzcp.sh
calc-utils/: 10log10  log10  sin
git-utils/: git_filemode_windows  gtbrrpt  gtpl  gtps  gtps.py  gtps.sh
matlab-utils/: memfree.m
pybashutils/: ChDir.py  getIP.py  getfreeport.py  logdemo.py  os_detect.py  ulimit.py
pybashutils/tests/: test_mod.py  test_unix.py
pythonutils/: ChDir.py  __init__.py  getIP.py  getfreeport.py  gitcommon.py  logdemo.py  ulimit_nofile.py  windows_linux_detect.py
test/: test.py
tests/: test.py  test_all.py  test_curl.py  test_mod.py  test_scripts.py  test_unix.py
wine-utils/: excel  powerpnt  word
