[metadata]
name = pybashutils
version = 0.6.4
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Cross-platform utilities for computer maintenance
url = https://github.com/scivision/pybashutils
keywords =
  bash
  networking
  cmake
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: System :: Networking
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
install_requires =
  colorama
  binaryornot

[options.extras_require]
tests =
  pytest
  pytest-cov
  flake8
  mypy
